tests/ifcc-test-output/testfiles-init-4_error/gcc-compile.txt
input.c:2:9: error: expected ';' at end of declaration
   int a 42;
        ^
        ;
1 error generated.

return code: 1
